--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-react": "7.12.13",
     "@babel/runtime": "7.13.7",
     "@babel/runtime-corejs3": "7.13.7",
+    "@jest/globals": "26.6.2",
     "@testing-library/react": "11.2.5",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.6.3",
