--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: CI
+name: CI/CD
 
 on:
   push:
@@ -25,6 +25,13 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Cache dependencies
+          uses: actions/cache@v2
+          with:
+            path: |
+              **/node_modules
+            key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
         run: npm install
 
@@ -39,12 +46,12 @@ jobs:
 
       - name: Deploy
         run:
-          git config --global user.name "gh-actions"
-          git config --global user.email "actions@gihub.com"
+          git config --global user.name $user_name
+          git config --global user.email $user_email
           git remote set-url origin https://${github_token}@github.com/${repository}
           npm run deploy
         env:
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
-          github_token: ${{secrets.ACTIONS_DEPLOY_ACCESS_TOKEN}}
-          repository: ${{github.repository}}
+          github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+          repository: ${{ github.repository }}
