--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,8 @@ jobs:
         run: npm run build
 
       - name: Deploy to GH Pages
-        run: npm run deploy
-        env:
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
-          github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
-          repository: ${{ github.repository }}
+        run:
+          git config --global user.email ${{secrets.DEPLOY_EMAIL}}
+          git config --global user.name ${{secrets.DEPLOY_USERNAME}}
+          git remote set-url origin https://${{secrets.DEPLOY_ACCESS_TOKEN}}@github.com/${{github.repository}}
+          npm run deploy
