--- a/package.json
+++ b/package.json
@@ -1,71 +1,70 @@
 {
-  "name": "gestion-contact-frontend",
-  "homepage": "https://chaouredha.github.io/gestion-contact-frontend",
+  "name": "transaction-frontend",
   "version": "1.0.0-SNAPSHOT",
-  "description": "Gestion contact",
+  "description": "transaction-frontend",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.13.1",
-    "@babel/plugin-transform-runtime": "7.13.7",
-    "@babel/preset-env": "7.13.5",
-    "@babel/preset-react": "7.12.13",
-    "@babel/runtime": "7.13.7",
-    "@babel/runtime-corejs3": "7.13.7",
-    "@jest/globals": "26.6.2",
-    "@testing-library/react": "11.2.5",
+    "@babel/core": "7.15.5",
+    "@babel/plugin-transform-runtime": "7.15.0",
+    "@babel/preset-env": "7.15.6",
+    "@babel/preset-react": "7.14.5",
+    "@babel/runtime": "7.15.4",
+    "@babel/runtime-corejs3": "7.15.4",
+    "@jest/globals": "27.2.0",
+    "@testing-library/react": "12.1.0",
     "babel-eslint": "10.1.0",
-    "babel-jest": "26.6.3",
+    "babel-jest": "27.2.0",
     "babel-loader": "8.2.2",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
-    "clean-webpack-plugin": "3.0.0",
-    "css-loader": "5.1.0",
-    "eslint": "7.20.0",
+    "clean-webpack-plugin": "4.0.0",
+    "css-loader": "6.2.0",
+    "eslint": "7.32.0",
     "eslint-config-standard-jsx": "10.0.0",
-    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react": "7.25.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "file-loader": "6.2.0",
-    "html-webpack-plugin": "5.2.0",
-    "husky": "5.1.1",
+    "html-webpack-plugin": "5.3.2",
+    "husky": "7.0.2",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.6.3",
-    "jest-styled-components": "7.0.3",
-    "lint-staged": "10.5.4",
-    "mini-css-extract-plugin": "1.3.9",
-    "npm-check-updates": "11.1.9",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
-    "prettier": "2.2.1",
-    "react-test-renderer": "17.0.1",
-    "source-map-loader": "2.0.1",
-    "styled-components": "5.2.1",
-    "terser-webpack-plugin": "5.1.1",
-    "webpack": "5.24.2",
-    "webpack-cli": "4.5.0",
-    "webpack-dev-server": "3.11.2"
+    "jest": "27.2.0",
+    "jest-styled-components": "7.0.5",
+    "lint-staged": "11.1.2",
+    "mini-css-extract-plugin": "2.3.0",
+    "npm-check-updates": "11.8.5",
+    "optimize-css-assets-webpack-plugin": "6.0.1",
+    "prettier": "2.4.0",
+    "react-test-renderer": "17.0.2",
+    "source-map-loader": "3.0.0",
+    "styled-components": "5.3.1",
+    "terser-webpack-plugin": "5.2.4",
+    "webpack": "5.52.1",
+    "webpack-cli": "4.8.0",
+    "webpack-dev-server": "4.2.1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chaouredha/gestion-contact-frontend.git"
+    "url": "git@github.com:chaouredha/transaction-frontend.git"
   },
   "author": "chaou.redha@gmail.com",
   "bugs": {
-    "url": "https://github.com/chaouredha/gestion-contact-frontend/issues"
+    "url": "https://github.com/chaouredha/transaction-frontend/issues"
   },
   "dependencies": {
-    "@tippyjs/react": "4.2.1",
-    "axios": "0.21.1",
-    "classnames": "2.2.6",
-    "core-js": "3.9.0",
-    "date-fns": "2.17.0",
-    "gh-pages": "^3.1.0",
+    "@tippyjs/react": "4.2.5",
+    "axios": "0.21.4",
+    "classnames": "2.3.1",
+    "core-js": "3.17.3",
+    "date-fns": "2.23.0",
+    "gh-pages": "^3.2.3",
     "prop-types": "15.7.2",
-    "react": "17.0.1",
-    "react-day-picker": "7.4.8",
-    "react-dom": "17.0.1",
-    "react-redux": "7.2.2",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "react-select": "4.1.0",
-    "redux": "4.0.5",
+    "react": "17.0.2",
+    "react-day-picker": "7.4.10",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.5",
+    "react-router": "5.2.1",
+    "react-router-dom": "5.3.0",
+    "react-select": "4.3.1",
+    "redux": "4.1.1",
     "redux-thunk": "2.3.0"
   },
   "scripts": {
